--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta charset="UTF-8">
     <title>your project name</title>
 <link href="./public/style.css" rel="stylesheet" />
-
-
-
-
 </head>
 
         <body>
@@ -72,15 +68,16 @@
             
             <!-- load src files -->
             <script src='./src/data.js'></script>
-            
             <script src='./src/init/init.js'></script>
             <!-- load the review buttons for your live deployment  -->
             <script type="module" src="./lib/review-buttons.js"></script>
+            <!-- load the handlers-->
             <script src="./src/handlers/get-newQuestion.js"></script>
             <script src="./src/handlers/show-answers.js"></script>
-            <script src="./src/listeners/get-newQuestion.js"></script>
-            <script src="/src/listeners/show-answers.js"></script>
-            <script src="src/handlers/cheat-button.js"></script>
+            <script src="./src/handlers/cheat-button.js"></script>
+            <!--load the listeners-->
+            <script src="src/listeners/get-newQuestion.js"></script>
+            <script src="src/listeners/show-answers.js"></script>
             <script src="src/listeners/cheat-button.js"></script>
             <script src="src/logic/get-currentQuestion.js"></script>
             <script src="src/logic/get-answer.js"></script>
